--- a/main.html
+++ b/main.html
@@ -1,15 +1,36 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <title>Feedback Form</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+  <h1>Feedback Form</h1>
+
+  <form method="post">
+
+    <!-- Name -->
+    <label for="name">Name</label>
+    <input type="text" id="name" minlength="3" maxlength="50" required>
+
+    <!-- Portfolio URL -->
+    <label for="portfolio">Portfolio</label>
+    <input type="url" id="portfolio" required>
+
+    <!-- Favorite Color -->
+    <label for="favColor">Favorite Color</label>
+    <input type="color" id="favColor">
+
+    <!-- Likeness Range -->
+    <label for="likeness">Likeness</label>
+    <input type="range" id="likeness" min="1" max="100">
+
+    <button type="submit">Submit</button>
+
+  </form>
 
 </body>
 
